TheKabal (23 July 2012)
--------------------------------------
Make SQL keywords consistently uppercase

TheMightyDude (23 July 2012)
--------------------------------------
Fixed Notice: Use of undefined constant zone_id - assumed 'zone_id' in admin.php
Fixed Notice: Use of undefined constant port_type - assumed 'port_type' in admin.php
Fixed Notice: Use of undefined constant name - assumed 'name' in admin.php
Fixed some cleanups of '?' to ? (cannot have single quotes around ?)
Fixed Notice:  Undefined variable: totalmines in check_mines.php
Fixed Notice: Use of undefined constant name - assumed 'name' in igb.php
Fixed Notice: Use of undefined constant ship_id - assumed 'ship_id' in igb.php
Fixed Notice: Use of undefined constant turns_used - assumed 'turns_used' in igb.php
Fixed Notice: Use of undefined constant balance - assumed 'balance' in igb.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in explode_mines.php
Fixed undefined indexes and offsets for the logs.
Fixed correct background image for newplayer.html
Fixed Notice: Undefined variable: l_holds in planet2.php
Fixed loads of Undefined variables and Undefined indexes in port2.php if no port.php post vars are passes.
Fixed Use of undefined constant count - assumed 'count' in warpedit2.php
Fixed Object of class ADORecordSet_mysqlt could not be converted to int in warpedit2.php
Fixed loads of Use of undefined constant link_dest - assumed 'link_dest' in warpedit2.php
Fixed Undefined variable: flag and flag2 in warpedit2.php
Fixed Use of undefined constant sector - assumed 'sector' in warpedit2.php
Fixed Undefined variable: flag in warpedit3.php
Fixed Undefined variable: bothway in warpedit3.php
Fixed Notice: Undefined variable: dbtables in check_mines.php
Fixed loads of Notice: Undefined variable: db_logging in combat.php
Fixed Notice: Use of undefined constant ship_fighters - assumed 'ship_fighters' in combat.php